[gd_scene load_steps=5 format=3 uid="uid://dq722isbk6e5y"]

[ext_resource type="Script" path="res://shop.gd" id="1_m5s4v"]
[ext_resource type="PackedScene" uid="uid://2brlt1tykqt0" path="res://go_to_main.tscn" id="2_y6h0d"]
[ext_resource type="Shortcut" uid="uid://bjvvm5nvfqt14" path="res://escapeShortcut.tres" id="3_5d8k6"]
[ext_resource type="PackedScene" uid="uid://kkywfpgnckni" path="res://score.tscn" id="3_bnyvh"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_m5s4v")

[node name="GoToMain" parent="." instance=ExtResource("2_y6h0d")]
offset_left = 538.0
offset_top = 159.0
offset_right = 570.0
offset_bottom = 191.0
scale = Vector2(2, 2)
shortcut = ExtResource("3_5d8k6")

[node name="Score" parent="." instance=ExtResource("3_bnyvh")]
offset_left = 0.0
offset_top = -3.0
offset_right = 299.0
offset_bottom = 134.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 90.0
offset_top = 298.0
offset_right = 1057.0
offset_bottom = 396.0
theme_override_constants/separation = 32
alignment = 1

[node name="JumpMore" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max jumps - "

[node name="MoreHealth" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max healths - "

[node name="MoneyMultiplier" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max healths - "

[node name="LessTimeForSword" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max healths - "

[connection signal="pressed" from="HBoxContainer/JumpMore" to="." method="_on_jump_more_pressed"]
[connection signal="pressed" from="HBoxContainer/MoreHealth" to="." method="_on_more_health_pressed"]
[connection signal="pressed" from="HBoxContainer/MoneyMultiplier" to="." method="_on_money_multiplier_pressed"]
[connection signal="pressed" from="HBoxContainer/LessTimeForSword" to="." method="_on_less_time_for_sword_pressed"]
